--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="alert alert-info text-center" role="alert">
-    We will be closed from Saturday, August 1st through Monday August 10th for
-    our annual summer vacation (staycation). We apologize for any inconvenience.
+    We will be closed from Saturday, July 27th returning Tusday, August 10th for
+    our Annual Summer Vacation (staycation). We apologize for any inconvenience.
   </div>
 </div>
