Annual Summer Vacation
Annual Summer Vacation

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,5 +2,6 @@
   <div class="alert alert-info text-center" role="alert">
     We will be closed from Saturday, August 1st through Monday August 10th for
     our annual summer vacation (staycation). We apologize for any inconvenience.
-  </div>
+  </div> We will be closed from Saturday, July 27 returning Tuesday, August 10th for
+    our Annual Summer Vacation (staycation). We apologize for any inconvenience.
 </div>
